# cd15315-Claude-AI-Engineer-Harness-Engineering

./: README.md
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/01-loop/: README.md
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/02-tools-and-audit/: README.md
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/03-dynamic-decomposition/: README.md
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/03-dynamic-decomposition/solution/: pyproject.toml
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/03-dynamic-decomposition/solution/claims_intake/: run.py  system_prompt.py  tools.py
Build a Claims Intake Agent with a stop_reason-Driven Loop/exercises/03-dynamic-decomposition/solution/fixtures/claims/: claim_04_neighbor_injury.json  claim_07_tree_falls_on_car.json  claim_08_minor_porch_damage.json
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/01-tiered-state/solution/: README.md
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/01-tiered-state/starter/: README.md
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/02-invocation-pipeline/solution/: README.md
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/04-fork-scratchpad/solution/: README.md  pyproject.toml
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/04-fork-scratchpad/solution/shift_monitor/: client.py  fork.py  state.py
Build a Multi-Shift Quality Monitoring System with Claude Orchestration/04-fork-scratchpad/solution/tests/: conftest.py  test_us04_fork_scratchpad.py
Configure Claude Code for a Multi-Surface Monorepo Team/01-compose-modular-claude-code-configuration/: README.md
Configure Claude Code for a Multi-Surface Monorepo Team/01-compose-modular-claude-code-configuration/starter/: CLAUDE.md  README.md  pyproject.toml
Configure Claude Code for a Multi-Surface Monorepo Team/01-compose-modular-claude-code-configuration/starter/.claude/rules/: api.md  tests.md
Configure Claude Code for a Multi-Surface Monorepo Team/01-compose-modular-claude-code-configuration/starter/src/db/: tx.ts
Configure Claude Code for a Multi-Surface Monorepo Team/01-compose-modular-claude-code-configuration/starter/src/services/: payment.ts
Configure Claude Code for a Multi-Surface Monorepo Team/02-author-project-scoped-review-command/: README.md
Configure Claude Code for a Multi-Surface Monorepo Team/03-author-forked-deploy-check-skill/: README.md
Configure Claude Code for a Multi-Surface Monorepo Team/04-plan-mode-and-explore-decision-doc/: README.md
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/01-prune-tool-output/: README.md
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/: README.md
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/starter/: pyproject.toml
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/starter/data/: eval_questions.json
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/starter/retail_context/: case_facts.py  client.py  compressor.py  evaluate.py  pruner.py
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/starter/spec/: PRD.md
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/02-case-facts-block/starter/tests/: test_compressor.py
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/03-compress-with-budget/: README.md
Engineer a Long-Conversation Context Strategy for a Retail Support Copilot/04-assemble-and-locate/: README.md
(+136 files in other folders)
