[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-monitor"
version = "0.1.0"
description = "Layer 3 orchestration for multi-shift quality monitoring with tiered hot/warm/cold state, crash-recovery manifests, and fork-and-scratchpad investigation."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "pydantic>=2.6",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
shift-monitor = "shift_monitor.__main__:main"

[tool.setuptools.packages.find]
include = ["shift_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["dateutil.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
