[project]
name = "claims_intake"
version = "0.1.0"
description = "Insurance Claims Intake Agent — Module 1 solution"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["claims_intake*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["claims_intake"]

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
